refactor: use Collections.unmodifiableList